Draft: 0.13 (do not use this if you want your space api work with available apps)
Stable: 0.12
Author: slopjong
=============================================

0.13: (last update: 6.3.2013)

  (1) Added cache/schedule
  (2) Made contact/email a required field to be able to send a report
      email on a revalidation failure. (reverted, replaced by point 11 & 12)
  (3) Moved lat and lon to location/{lat,lon}
  (4) Made location and location/{lat,lon} required fields
  (5) The meaning of the status field has changed, it's now a compound
      object of all the fields that are related to the space status
  (6) Moved the fields open, lastchange and icon to state/{open,lastchange,icon}
  (7) Added state/message field which was the former free-text status field
  (8) Made the status icons non-required, because there's no app that
      is really using them and furthermore some spaces use them incorrectly
      because they (haven't|don't want) such icons.
  (9) Moved address to location/address
  (10) Changed events/t to events/timestamp to make that field more clear
  (11) Added contact/issue-mail (optional), an email address where SpaceAPI
       issues can be sent to. The value can be base64-encoded.
  (12) Added issue-report-channels (required), a list of communication channels
       where issues should be reported to. At least one channel must be defined.
  (13) Field projects added which is an array of the project sites.

0.12:

  * Added sensors/temp
  * Added feeds/{name,type,url}

0.11:

  * Added icon/{open,closed}
    
0.9:

  * Removed phone
  * Added contact/{phone,sip,keymaster,irc,twitter,email,ml,jabber}
    
0.8:

  * api
  * space
  * logo
  * url
  * address
  * phone
  * lat
  * lon
  * cam
  * stream
  * open
  * status
  * events/{name,type,t,extra}