@@ -24,6 +24,8 @@ Author: slopjong
   (12) Added issue-report-channels (required), a list of communication channels
        where issues should be reported to. At least one channel must be defined.
   (13) Field projects added which is an array of the project sites.
+  (14) Field 'spacefed-auth' added which is a flag denoting if a space is using
+       the inter-(hacker)space federated authentication platform.
 
 0.12:
 
